@@ -4,37 +4,54 @@ import java.io.IOException;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.function.Supplier;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import stirling.software.common.controller.WebSocketProgressController;
 import stirling.software.common.model.job.JobProgress;
 import stirling.software.common.model.job.JobResponse;
 
-/**
- * Service for executing jobs asynchronously or synchronously
- */
+/** Service for executing jobs asynchronously or synchronously */
 @Service
-@RequiredArgsConstructor
 @Slf4j
 public class JobExecutorService {
 
     private final TaskManager taskManager;
     private final WebSocketProgressController webSocketSender;
     private final FileStorage fileStorage;
-    private final ExecutorService executor = Executors.newCachedThreadPool();
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+    private final long effectiveTimeoutMs;
+
+    public JobExecutorService(
+            TaskManager taskManager,
+            WebSocketProgressController webSocketSender,
+            FileStorage fileStorage,
+            @Value("${spring.mvc.async.request-timeout:1200000}") long asyncRequestTimeoutMs,
+            @Value("${server.servlet.session.timeout:30m}") String sessionTimeout) {
+        this.taskManager = taskManager;
+        this.webSocketSender = webSocketSender;
+        this.fileStorage = fileStorage;
+
+        // Parse session timeout and calculate effective timeout once during initialization
+        long sessionTimeoutMs = parseSessionTimeout(sessionTimeout);
+        this.effectiveTimeoutMs = Math.min(asyncRequestTimeoutMs, sessionTimeoutMs);
+        log.info(
+                "Job executor configured with effective timeout of {} ms", this.effectiveTimeoutMs);
+    }
 
     /**
      * Run a job either asynchronously or synchronously
-     * 
+     *
      * @param async Whether to run the job asynchronously
      * @param work The work to be done
      * @return The response
@@ -50,10 +67,22 @@ public class JobExecutorService {
             executor.execute(
                     () -> {
                         try {
-                            Object result = work.get();
+                            log.debug(
+                                    "Running async job {} with timeout {} ms",
+                                    jobId,
+                                    effectiveTimeoutMs);
+
+                            // Execute with timeout
+                            Object result =
+                                    executeWithTimeout(() -> work.get(), effectiveTimeoutMs);
                             processJobResult(jobId, result);
                             webSocketSender.sendProgress(
                                     jobId, new JobProgress(jobId, "Done", 100, "Complete"));
+                        } catch (TimeoutException te) {
+                            log.error("Job {} timed out after {} ms", jobId, effectiveTimeoutMs);
+                            taskManager.setError(jobId, "Job timed out");
+                            webSocketSender.sendProgress(
+                                    jobId, new JobProgress(jobId, "Error", 100, "Job timed out"));
                         } catch (Exception e) {
                             log.error("Error executing job {}: {}", jobId, e.getMessage(), e);
                             taskManager.setError(jobId, e.getMessage());
@@ -65,25 +94,32 @@ public class JobExecutorService {
             return ResponseEntity.ok().body(new JobResponse<>(true, jobId, null));
         } else {
             try {
-                Object result = work.get();
-                
+                log.debug("Running sync job with timeout {} ms", effectiveTimeoutMs);
+
+                // Execute with timeout
+                Object result = executeWithTimeout(() -> work.get(), effectiveTimeoutMs);
+
                 // If the result is already a ResponseEntity, return it directly
                 if (result instanceof ResponseEntity) {
                     return (ResponseEntity<?>) result;
                 }
-                
+
                 // Process different result types
                 return handleResultForSyncJob(result);
+            } catch (TimeoutException te) {
+                log.error("Synchronous job timed out after {} ms", effectiveTimeoutMs);
+                return ResponseEntity.internalServerError()
+                        .body("Job timed out after " + effectiveTimeoutMs + " ms");
             } catch (Exception e) {
                 log.error("Error executing synchronous job: {}", e.getMessage(), e);
                 return ResponseEntity.internalServerError().body("Job failed: " + e.getMessage());
             }
         }
     }
-    
+
     /**
      * Process the result of an asynchronous job
-     * 
+     *
      * @param jobId The job ID
      * @param result The result
      */
@@ -97,25 +133,27 @@ public class JobExecutorService {
             } else if (result instanceof ResponseEntity) {
                 ResponseEntity<?> response = (ResponseEntity<?>) result;
                 Object body = response.getBody();
-                
+
                 if (body instanceof byte[]) {
                     // Extract filename from content-disposition header if available
                     String filename = "result.pdf";
                     String contentType = "application/pdf";
-                    
+
                     if (response.getHeaders().getContentDisposition() != null) {
-                        String disposition = response.getHeaders().getContentDisposition().toString();
+                        String disposition =
+                                response.getHeaders().getContentDisposition().toString();
                         if (disposition.contains("filename=")) {
-                            filename = disposition.substring(
-                                    disposition.indexOf("filename=") + 9, 
-                                    disposition.lastIndexOf("\""));
+                            filename =
+                                    disposition.substring(
+                                            disposition.indexOf("filename=") + 9,
+                                            disposition.lastIndexOf("\""));
                         }
                     }
-                    
+
                     if (response.getHeaders().getContentType() != null) {
                         contentType = response.getHeaders().getContentType().toString();
                     }
-                    
+
                     String fileId = fileStorage.storeBytes((byte[]) body, filename);
                     taskManager.setFileResult(jobId, fileId, filename, contentType);
                     log.debug("Stored ResponseEntity<byte[]> result with fileId: {}", fileId);
@@ -124,26 +162,30 @@ public class JobExecutorService {
                     if (body != null && body.toString().contains("fileId")) {
                         try {
                             // Try to extract fileId using reflection
-                            java.lang.reflect.Method getFileId = body.getClass().getMethod("getFileId");
+                            java.lang.reflect.Method getFileId =
+                                    body.getClass().getMethod("getFileId");
                             String fileId = (String) getFileId.invoke(body);
-                            
+
                             if (fileId != null && !fileId.isEmpty()) {
                                 // Try to get filename and content type
                                 String filename = "result.pdf";
                                 String contentType = "application/pdf";
-                                
+
                                 try {
-                                    java.lang.reflect.Method getOriginalFileName = body.getClass().getMethod("getOriginalFilename");
+                                    java.lang.reflect.Method getOriginalFileName =
+                                            body.getClass().getMethod("getOriginalFilename");
                                     String origName = (String) getOriginalFileName.invoke(body);
                                     if (origName != null && !origName.isEmpty()) {
                                         filename = origName;
                                     }
                                 } catch (Exception e) {
-                                    log.debug("Could not get original filename: {}", e.getMessage());
+                                    log.debug(
+                                            "Could not get original filename: {}", e.getMessage());
                                 }
-                                
+
                                 try {
-                                    java.lang.reflect.Method getContentType = body.getClass().getMethod("getContentType");
+                                    java.lang.reflect.Method getContentType =
+                                            body.getClass().getMethod("getContentType");
                                     String ct = (String) getContentType.invoke(body);
                                     if (ct != null && !ct.isEmpty()) {
                                         contentType = ct;
@@ -151,18 +193,20 @@ public class JobExecutorService {
                                 } catch (Exception e) {
                                     log.debug("Could not get content type: {}", e.getMessage());
                                 }
-                                
+
                                 taskManager.setFileResult(jobId, fileId, filename, contentType);
                                 log.debug("Extracted fileId from response body: {}", fileId);
-                                
+
                                 taskManager.setComplete(jobId);
                                 return;
                             }
                         } catch (Exception e) {
-                            log.debug("Failed to extract fileId from response body: {}", e.getMessage());
+                            log.debug(
+                                    "Failed to extract fileId from response body: {}",
+                                    e.getMessage());
                         }
                     }
-                    
+
                     // Store generic result
                     taskManager.setResult(jobId, body);
                 }
@@ -170,26 +214,25 @@ public class JobExecutorService {
                 MultipartFile file = (MultipartFile) result;
                 String fileId = fileStorage.storeFile(file);
                 taskManager.setFileResult(
-                        jobId, 
-                        fileId, 
-                        file.getOriginalFilename(), 
-                        file.getContentType());
+                        jobId, fileId, file.getOriginalFilename(), file.getContentType());
                 log.debug("Stored MultipartFile result with fileId: {}", fileId);
             } else {
                 // Check if result has a fileId field
                 if (result != null) {
                     try {
                         // Try to extract fileId using reflection
-                        java.lang.reflect.Method getFileId = result.getClass().getMethod("getFileId");
+                        java.lang.reflect.Method getFileId =
+                                result.getClass().getMethod("getFileId");
                         String fileId = (String) getFileId.invoke(result);
-                        
+
                         if (fileId != null && !fileId.isEmpty()) {
                             // Try to get filename and content type
                             String filename = "result.pdf";
                             String contentType = "application/pdf";
-                            
+
                             try {
-                                java.lang.reflect.Method getOriginalFileName = result.getClass().getMethod("getOriginalFilename");
+                                java.lang.reflect.Method getOriginalFileName =
+                                        result.getClass().getMethod("getOriginalFilename");
                                 String origName = (String) getOriginalFileName.invoke(result);
                                 if (origName != null && !origName.isEmpty()) {
                                     filename = origName;
@@ -197,9 +240,10 @@ public class JobExecutorService {
                             } catch (Exception e) {
                                 log.debug("Could not get original filename: {}", e.getMessage());
                             }
-                            
+
                             try {
-                                java.lang.reflect.Method getContentType = result.getClass().getMethod("getContentType");
+                                java.lang.reflect.Method getContentType =
+                                        result.getClass().getMethod("getContentType");
                                 String ct = (String) getContentType.invoke(result);
                                 if (ct != null && !ct.isEmpty()) {
                                     contentType = ct;
@@ -207,32 +251,33 @@ public class JobExecutorService {
                             } catch (Exception e) {
                                 log.debug("Could not get content type: {}", e.getMessage());
                             }
-                            
+
                             taskManager.setFileResult(jobId, fileId, filename, contentType);
                             log.debug("Extracted fileId from result object: {}", fileId);
-                            
+
                             taskManager.setComplete(jobId);
                             return;
                         }
                     } catch (Exception e) {
-                        log.debug("Failed to extract fileId from result object: {}", e.getMessage());
+                        log.debug(
+                                "Failed to extract fileId from result object: {}", e.getMessage());
                     }
                 }
-                
+
                 // Default case: store the result as is
                 taskManager.setResult(jobId, result);
             }
-            
+
             taskManager.setComplete(jobId);
         } catch (Exception e) {
             log.error("Error processing job result: {}", e.getMessage(), e);
             taskManager.setError(jobId, "Error processing result: " + e.getMessage());
         }
     }
-    
+
     /**
      * Handle different result types for synchronous jobs
-     * 
+     *
      * @param result The result object
      * @return The appropriate ResponseEntity
      * @throws IOException If there is an error processing the result
@@ -242,7 +287,8 @@ public class JobExecutorService {
             // Return byte array as PDF
             return ResponseEntity.ok()
                     .contentType(MediaType.APPLICATION_PDF)
-                    .header(HttpHeaders.CONTENT_DISPOSITION, 
+                    .header(
+                            HttpHeaders.CONTENT_DISPOSITION,
                             "form-data; name=\"attachment\"; filename=\"result.pdf\"")
                     .body(result);
         } else if (result instanceof MultipartFile) {
@@ -250,13 +296,74 @@ public class JobExecutorService {
             MultipartFile file = (MultipartFile) result;
             return ResponseEntity.ok()
                     .contentType(MediaType.parseMediaType(file.getContentType()))
-                    .header(HttpHeaders.CONTENT_DISPOSITION, 
-                            "form-data; name=\"attachment\"; filename=\"" + 
-                                    file.getOriginalFilename() + "\"")
+                    .header(
+                            HttpHeaders.CONTENT_DISPOSITION,
+                            "form-data; name=\"attachment\"; filename=\""
+                                    + file.getOriginalFilename()
+                                    + "\"")
                     .body(file.getBytes());
         } else {
             // Default case: return as JSON
             return ResponseEntity.ok(result);
+        }
+    }
+
+    /**
+     * Parse session timeout string (e.g., "30m", "1h") to milliseconds
+     *
+     * @param timeout The timeout string
+     * @return The timeout in milliseconds
+     */
+    private long parseSessionTimeout(String timeout) {
+        if (timeout == null || timeout.isEmpty()) {
+            return 30 * 60 * 1000; // Default: 30 minutes
+        }
+
+        try {
+            String value = timeout.replaceAll("[^\\d.]", "");
+            String unit = timeout.replaceAll("[\\d.]", "");
+
+            double numericValue = Double.parseDouble(value);
+
+            return switch (unit.toLowerCase()) {
+                case "s" -> (long) (numericValue * 1000);
+                case "m" -> (long) (numericValue * 60 * 1000);
+                case "h" -> (long) (numericValue * 60 * 60 * 1000);
+                case "d" -> (long) (numericValue * 24 * 60 * 60 * 1000);
+                default -> (long) (numericValue * 60 * 1000); // Default to minutes
+            };
+        } catch (Exception e) {
+            log.warn("Could not parse session timeout '{}', using default", timeout);
+            return 30 * 60 * 1000; // Default: 30 minutes
+        }
+    }
+
+    /**
+     * Execute a supplier with a timeout
+     *
+     * @param supplier The supplier to execute
+     * @param timeoutMs The timeout in milliseconds
+     * @return The result from the supplier
+     * @throws TimeoutException If the execution times out
+     * @throws Exception If the supplier throws an exception
+     */
+    private <T> T executeWithTimeout(Supplier<T> supplier, long timeoutMs)
+            throws TimeoutException, Exception {
+        java.util.concurrent.CompletableFuture<T> future =
+                java.util.concurrent.CompletableFuture.supplyAsync(supplier);
+
+        try {
+            return future.get(timeoutMs, TimeUnit.MILLISECONDS);
+        } catch (java.util.concurrent.TimeoutException e) {
+            future.cancel(true);
+            throw new TimeoutException("Execution timed out after " + timeoutMs + " ms");
+        } catch (java.util.concurrent.ExecutionException e) {
+            throw (Exception) e.getCause();
+        } catch (java.util.concurrent.CancellationException e) {
+            throw new Exception("Execution was cancelled", e);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new Exception("Execution was interrupted", e);
         }
     }
 }
